Save source string when parsing

--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -1,6 +1,6 @@
 \usepackage{amsmath, amssymb, amsthm, thmtools, thm-restate, tikz, graphicx,
   hyperref, cleveref, comment, expl3, xparse, ebproof, enumitem, xcolor,
-  stmaryrd, backnaur, verbatim}
+  stmaryrd, backnaur, verbatim, todonotes}
 
 \usepackage[titlenumbered, ruled]{algorithm2e}
 \usetikzlibrary{shapes.geometric}
