Flesh out specs for existentials and implement them

--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -101,6 +101,7 @@
 \DeclareMathOperator{\inl}{inl}
 \DeclareMathOperator{\inr}{inr}
 \DeclareMathOperator{\match}{match}
+\DeclareMathOperator{\existselim}{exists\_elim}
 
 \DeclareMathOperator{\hnf}{hnf}
 \DeclareMathOperator{\neutral}{neutral}
